# prompt-injection-defense

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENT-round2.md  EXPERIMENT.md  Makefile  README.md  analyze_r2.py  pyproject.toml  run_experiment_r2.py
.github/ISSUE_TEMPLATE/: bug.md  experiment.md
.github/workflows/: ci.yml
docs/: ISSUE_LABELS.md  RUN_SCHEMA.md
experiments/opencode-agent-models/: README.md  analyze.sh  models.txt  run-test.sh
experiments/prompt-injection-boundary-tags/: EXPERIMENT-round3.md  README.md  analyze.py  analyze_r2.py  run_experiment.py  run_experiment_r2.py  run_experiment_round2.py
experiments/prompt-injection-boundary-tags/rounds/: README.md
experiments/prompt-injection-boundary-tags/rounds/canonical/: README.md  cross_round_analysis.md  runs_v1.csv
experiments/prompt-injection-boundary-tags/rounds/round3/: README.md  design.md
experiments/prompt-injection-boundary-tags/rounds/round4/: README.md  design.md
experiments/prompt-injection-boundary-tags/shared/: output_filter.py
tests/: test_budget_controller.py  test_calibrate_round2b_scorer.py  test_confidence_intervals.py  test_live_preflight.py  test_live_preflight_enforcement.py  test_output_filter.py  test_round4_harness.py  test_round5_harness.py  test_round6_harness.py  test_round7_harness.py  test_round8_harness.py  test_shared_scorer.py
tools/: analyze_prompt_injection_runs.py  analyze_prompt_injection_with_ci.py  calibrate_round2b_scorer.py  check_compat_wrappers.py  normalize_prompt_injection_runs.py
(+91 files in other folders)
